Fixes menu scroll on tablets

--- a/styleguide/source/assets/scss/03-organisms/_main-navigation.scss
+++ b/styleguide/source/assets/scss/03-organisms/_main-navigation.scss
@@ -35,7 +35,15 @@
     width: 110%;
 
     &.scroll {
-      overflow: hidden;
+      overflow: initial;
+
+      @include breakpoint($bp-small min-width) {
+        overflow: auto;
+      }
+
+      @include breakpoint($bp-large min-width) {
+        overflow: hidden;
+      }
     }
   }
 
